<resources>
    <string name="app_name">LoadSheddingReminder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">LoadShedding Reminder</string>
    <string name="landing_page_option1">Manage Reminder</string>
    <string name="landing_page_option2">Select Area</string>
    <string name="landing_page_option3">View Schedule</string>
    <string name="select_area">Select Area</string>
    <string name="title_activity_select_area">Select Your Area</string>
    <string name="title_activity_time_picker">TimePicker</string>
    <string name="title_reminder_for_loadshedding">Create Reminder</string>
    <string name="description_time_picker">Click ok to set time to get reminder at n hours and
        n mins before loadshedding</string>
    <string name="set_time">Set Reminder</string>
    <string name="title_activity_view_schedule">ViewScheduleActivity</string>

    <string name="prompt_select_area">Select Area</string>
    <string name="prompt_select_day">Select Day</string>
    <string name="prompt_select_time">Select Time</string>
</resources>
