<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/launching_page_background_img"
    tools:context="com.bishalniroj.loadsheddingreminder.ReminderForLoadShedding">
    <Spinner
        android:id="@+id/selectAreaSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:prompt="@string/prompt_select_area"
        android:entries="@array/area_arrays"></Spinner>
    <View style="@style/divider" />
    <Spinner
        android:id="@+id/selectDaySpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:prompt="@string/prompt_select_day"
        android:entries="@array/day_arrays"></Spinner>
    <View style="@style/divider" />
    <Spinner
        android:id="@+id/selectTimeSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/time_arrays"
        android:prompt="@string/prompt_select_time"></Spinner>
    <View style="@style/divider" />
    <Button
        android:id="@+id/setTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:text="@string/set_time"/>
    <View style="@style/divider" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:text="List of Reminders:"
        android:textSize="16sp"
        android:textStyle="italic|bold"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/selectedReminders"></ListView>

</LinearLayout>
