<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="50dp"
    android:background="@drawable/launching_page_background_img" >

    <Button
        android:id="@+id/selectArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:text="@string/landing_page_option1"
        android:textSize="24sp" />

    <Button
        android:id="@+id/adjustReminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/selectArea"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/landing_page_option2"
        android:textSize="24sp" />
    <Button
        android:id="@+id/viewSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectArea"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/landing_page_option3"
        android:textSize="24sp" />

</RelativeLayout>